# email-triage-openenv

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  __init__.py  client.py  email_dataset.json  inference.py  mock_env.py  models.py  openenv.yaml  prompt.md  pyproject.toml  q_table.json  requirements.txt  validate.py
server/: app.py  email_dataset.py  email_triage_environment.py  llm_judge.py
